2001-11-19  Kenichi OKADA  <okada@opaopa.org>

	* smtp.el (smtp-find-server): Fix.

2001-11-18  Kenichi OKADA  <okada@opaopa.org>

	* smtp.el (smtp-send-by-myself): Fix.

2001-11-18  Kenichi OKADA  <okada@opaopa.org>

	* smtp.el (smtp-send-by-myself): New variable.
	(smtp-use-starttls-ignore-error): New variable.
	(smtp-find-mx): New function.
	(smtp-dig): New function.
	(smtp-find-server): New function.
	(smtp-send-buffer-by-myself): New funcion.
	(smtp-send-buffer): Change for `smtp-send-buffer-by-myself'.

2001-11-03  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* hmac-md5.el: Removed kludge for Emacs 21 prerelease versions.

2001-07-16  Katsumi Yamaoka   <yamaoka@jpl.org>

	* smtpmail.el (smtpmail-send-it): Work even if the first line of
	the subject field has no content (synch with Emacs 20.3).

2001-09-21  Kenichi OKADA  <okada@opaopa.org>

	* smtp.el(smtp-submit-package): Check extensions for starttls.

2001-07-30  AMAKAWA Shuhei <sa264@cam.ac.uk>

	* smtp.el(smtp-submit-package): Send EHLO after starttls.

2001-06-01  Kenichi OKADA  <okada@opaopa.org>

	* SLIM: Version 1.14.7 released.

2001-06-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mel-b-el.el: Require `pces' for the macro `as-binary-process'
	when compiling.

	* mel-q.el: Add a comment that the feature `poem' is also required
	for the macro `as-binary-process'.

2001-05-31  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	Merged MIME Parameter Value decoder.

	* mime-parse.el (mime-decode-parameters): Renamed from
	`mime-decode-parameter-plist'.
	(mime-decode-parameter-alist): Removed.
	(mime-decode-alist-to-plist): Ditto.

	* FLIM-API.en (mime-entity-encoding): Abolish optional argument
	`default-encoding'.
	(mime-parse-Content-Tranfer-Encoding): Ditto.

2001-05-02  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* eword-decode.el (eword-decode-encoded-word): Don't use `let'.

	* mime-parse.el (mime-decode-parameter-plist): Modified
	description of return value.
	(mime-parse-Content-Type): Ditto.